//
//  Constants.swift
//  MovieApp
//
//  Created by Wajih Benabdessalem on 5/22/24.
//

import Foundation

struct AppString {
    static let caAccount = "Credit Agricole"
    static let otherAccount = "Autres Banques"
    static let myAccounts = "Mes Comptes"
    static let simulation = "Simulation"
    static let upToYou = "À vous de jouer"
    static let invalidUrl = "Unable to perform the request"
    static let invalidResponse = "There is no valid data, please try again."
    static let requestFailed = "Sorry for the inconvinience, server is not reachable."
    static let connectionError = "Your internet connection appears to be offline. Please try again."
    static let errorMessage = "Something went wrong. Please try again."
}
